--- a/tests/beaker/files/websphere_instance_manifest.erb
+++ b/tests/beaker/files/websphere_instance_manifest.erb
@@ -2,20 +2,12 @@ $base_dir         = '/opt/IBM'
 $instance_name    = 'WebSphere85'
 $instance_base    = "${base_dir}/${instance_name}/AppServer"
 $profile_base     = "${instance_base}/profiles"
-$was_installer    = '/ibminstallers/ibm/ndtrial'
+$was_installer    = '/mnt/QA_resources/ibm_websphere/ndtrial'
 $package_name     = 'com.ibm.websphere.NDTRIAL.v85'
 $package_version  = '8.5.5000.20130514_1044'
 $user             = 'webadmin'
 $group            = 'webadmins'
-# Declare the IBM Installation Manager class. Make sure IM is installed.
-# We want to install it to /opt/IBM/InstallationManager
-# We have it downloaded and extracted under /ibminstallers/ibm/IM
 
-class { 'ibm_installation_manager':
-    deploy_source => true,
-    source        => 'http://int-resources.ops.puppetlabs.net/QA_resources/ibm_websphere/agent.installer.linux.gtk.x86_64_1.8.3000.20150606_0047.zip',
-    target        => '/opt/IBM/InstallationManager',
-}
 # Organizational log locations
 file { [
     '/opt/log',
@@ -26,12 +18,9 @@ file { [
 ]:
     ensure => 'directory',
     owner  => $user,
-    group  => $group',
+    group  => $group,
 }
-->
-# Base stuff for WebSphere.  Specify a common user/group and the base
-# directory to where we want things to live.  Make sure the
-# InstallationManager is managed before we do this.
+
 class { 'websphere_application_server':
     user     => $user,
     group    => $group,
