(FM-5141) Install IBM fixpacks on aix

--- a/tests/beaker/files/websphere_instance_manifest.erb
+++ b/tests/beaker/files/websphere_instance_manifest.erb
@@ -1,10 +1,10 @@
-$base_dir         = '/opt/IBM'
-$instance_name    = 'WebSphere85'
-$instance_base    = "${base_dir}/${instance_name}/AppServer"
-$profile_base     = "${instance_base}/profiles"
-$was_installer    = '/mnt/QA_resources/ibm_websphere/ndtrial'
-$package_name     = 'com.ibm.websphere.NDTRIAL.v85'
-$package_version  = '8.5.5000.20130514_1044'
+$base_dir         = '<%= base_dir %>'
+$instance_name    = '<%= instance_name %>'
+$instance_base    = '<%= instance_base %>'
+$profile_base     = '<%= profile_base %>'
+$was_installer    = '<%= was_installer %>'
+$package_name     = '<%= package_name %>'
+$package_version  = '<%= package_version %>'
 $user             = 'webadmin'
 $group            = 'webadmins'
 
