--- a/tests/beaker/files/websphere_fixpack_manifest.erb
+++ b/tests/beaker/files/websphere_fixpack_manifest.erb
@@ -33,7 +33,7 @@ class { 'websphere_application_server':
     base_dir => $base_dir,
 }
 
-websphere_application_server::instance { '<%= instance_name %>':
+websphere_application_server::instance { $instance_name:
     target       => $instance_base,
     package      => $package_name,
     version      => $package_version,
@@ -51,7 +51,7 @@ ibm_pkg { 'WebSphere_fixpack':
     target        => $instance_base,
     package_owner => $user,
     package_group => $group,
-    require       => Websphere_application_server::Instance['<%= instance_name %>'],
+    require       => Websphere_application_server::Instance["${instance_name}"],
 }
 
 ibm_pkg { 'Websphere_Java':
