--- a/tests/beaker/files/websphere_instance_manifest.erb
+++ b/tests/beaker/files/websphere_instance_manifest.erb
@@ -27,7 +27,7 @@ class { 'websphere_application_server':
     base_dir => $base_dir,
 }
 ->
-websphere_application_server::instance { 'WebSphere85':
+websphere_application_server::instance { $instance_name:
     target       => $instance_base,
     package      => $package_name,
     version      => $package_version,
