(FM-5141) updated interpolation for variables in puppet manifest

--- a/tests/beaker/files/websphere_fixpack_manifest.erb
+++ b/tests/beaker/files/websphere_fixpack_manifest.erb
@@ -33,7 +33,7 @@ class { 'websphere_application_server':
     base_dir => $base_dir,
 }
 
-websphere_application_server::instance { $instance_name:
+websphere_application_server::instance { "${instance_name}":
     target       => $instance_base,
     package      => $package_name,
     version      => $package_version,
