(maint) Fixes path for htpasswd

--- a/templates/ihs/htpasswd.erb
+++ b/templates/ihs/htpasswd.erb
@@ -1,5 +1,5 @@
 salt=$(cut -d$ -f3 <%= @_target %>/conf/admin.passwd)
-pass=$(/opt/puppet/bin/openssl passwd -apr1 -salt ${salt} <%= @admin_password %>)
+pass=$(/opt/puppetlabs/puppet/bin/openssl passwd -apr1 -salt ${salt} <%= @admin_password %>)
 
 grep -q "<%= @admin_username %>:${pass}" <%= @_target %>/conf/admin.passwd
 
