--- a/spec/acceptance/fixtures/websphere_class.erb
+++ b/spec/acceptance/fixtures/websphere_class.erb
@@ -3,24 +3,29 @@
 # The rest are loaded from the WebSphereConstants.
 
 file { [
-  '/opt/log',
-  '/opt/log/websphere',
-  '/opt/log/websphere/appserverlogs',
-  '/opt/log/websphere/applogs',
-  '/opt/log/websphere/wasmgmtlogs',
+  '<%= base_dir %>/log',
+  '<%= base_dir %>/log/websphere',
+  '<%= base_dir %>/log/websphere/appserverlogs',
+  '<%= base_dir %>/log/websphere/applogs',
+  '<%= base_dir %>/log/websphere/wasmgmtlogs',
 ]:
   ensure => 'directory',
-  owner  => '<%= WebSphereConstants.user %>',
-  group  => '<%= WebSphereConstants.group %>',
+  owner  => '<%= user %>',
+  group  => '<%= group %>',
 }
+
 
 # Base stuff for WebSphere.  Specify a common user/group and the base
 # directory to where we want things to live.  Make sure the
-# InstallationManager is managed before we do this.
+# InstallationManager is managed before we do this. If the user is 'root',
+# user_home and base_dir will be the same.
 class { '<%= WebSphereConstants.class_name %>':
-  user     => '<%= WebSphereConstants.user %>',
-  group    => '<%= WebSphereConstants.group %>',
-  base_dir => '<%= WebSphereConstants.base_dir %>',
+  manage_user  => false,
+  manage_group => false,
+  user         => '<%= user %>',
+  group        => '<%= group %>',
+  base_dir     => '<%= base_dir %>',
+  user_home    => '<%= WebSphereConstants.user_home %>',
 }
 
 <%= WebSphereConstants.class_name %>::instance { '<%= instance_name %>':
@@ -29,8 +34,8 @@ class { '<%= WebSphereConstants.class_name %>':
   version      => '<%= WebSphereConstants.package_version %>',
   profile_base => '<%= profile_base %>',
   repository   => "<%= WebSphereConstants.repository %>",
-  user         => '<%= WebSphereConstants.user %>',
-  group        => '<%= WebSphereConstants.group %>',
+  user         => '<%= user %>',
+  group        => '<%= group %>',
 }
 
 ibm_pkg { '<%= fixpack_name %>':
@@ -39,9 +44,10 @@ ibm_pkg { '<%= fixpack_name %>':
   version       => '<%= FixpackConstants.version %>',
   repository    => '<%= FixpackConstants.repository %>',
   target        => '<%= instance_base %>',
-  package_owner => '<%= WebSphereConstants.user %>',
-  package_group => '<%= WebSphereConstants.group %>',
+  package_owner => '<%= user %>',
+  package_group => '<%= group %>',
   require       => Websphere_application_server::Instance['<%= instance_name %>'],
+  user          => '<%= user %>',
 }
 
 ibm_pkg { '<%= java7_name %>':
@@ -50,7 +56,8 @@ ibm_pkg { '<%= java7_name %>':
   version       => '<%= JavaInstallerConstants.java7_version %>',
   repository    => "<%= JavaInstallerConstants.java7_installer %>/repository.config",
   target        => '<%= instance_base %>',
-  package_owner => '<%= WebSphereConstants.user %>',
-  package_group => '<%= WebSphereConstants.group %>',
+  package_owner => '<%= user %>',
+  package_group => '<%= group %>',
   require       => Ibm_pkg['<%= fixpack_name %>'],
+  user          => '<%= user %>',
 }
