--- a/spec/acceptance/fixtures/websphere_ihs.erb
+++ b/spec/acceptance/fixtures/websphere_ihs.erb
@@ -1,42 +1,46 @@
 class { 'websphere_application_server':
-  user     => "<%= WebSphereConstants.user %>",
-  group    => "<%= WebSphereConstants.group %>",
-  base_dir => "<%= WebSphereConstants.base_dir %>",
+  user         => "<%= WebSphereConstants.user %>",
+  group        => "<%= WebSphereConstants.group %>",
+  user_home    => "<%= WebSphereConstants.user_home %>",
+  base_dir     => "<%= WebSphereConstants.base_dir %>",
+  manage_user  => false,
+  manage_group => false,
 }
 
 websphere_application_server::ihs::instance { '<%= IhsInstance.ihs_target %>':
-  target           => "<%= WebSphereConstants.base_dir %>/<%= IhsInstance.ihs_target %>",
-  package          => "<%= IhsInstance.package_ihs %>",
-  version          => "<%= WebSphereConstants.package_version %>",
-  repository       => '/opt/QA_resources/ibm_websphere/ihs_ilan/repository.config',
-  install_options  => '-properties user.ihs.httpPort=80',
-  manage_user      => false,
-  manage_group     => false,
-  log_dir          => '/opt/log/websphere/httpserver',
-  admin_username   => 'httpadmin',
-  admin_password   => 'password',
-  webroot          => '/opt/web',
+  target          => "<%= WebSphereConstants.base_dir %>/<%= IhsInstance.ihs_target %>",
+  package         => "<%= IhsInstance.package_ihs %>",
+  version         => "<%= WebSphereConstants.package_version %>",
+  repository      => '<%= HelperConstants.qa_resources %>/ibm_websphere/ihs_ilan/repository.config',
+  install_options => '-properties user.ihs.httpPort=80,user.ihs.allowNonRootSilentInstall=true',
+  manage_user     => false,
+  manage_group    => false,
+  log_dir         => '<%= WebSphereConstants.base_dir %>/log/websphere/httpserver',
+  admin_username  => 'httpadmin',
+  admin_password  => 'password',
+  webroot         => '/opt/web',
 }
 
 ibm_pkg { 'Plugins':
   ensure     => 'present',
   target     => "<%= WebSphereConstants.base_dir %>/Plugins",
-  repository => '/opt/QA_resources/ibm_websphere/plg_ilan/repository.config',
+  repository => '<%= HelperConstants.qa_resources %>/ibm_websphere/plg_ilan/repository.config',
   package    => "<%= IhsInstance.package_plugin %>",
   version    => "<%= WebSphereConstants.package_version %>",
   require    => Websphere_application_server::Ihs::Instance['<%= IhsInstance.ihs_target %>'],
+  user       => '<%= WebSphereConstants.user %>',
 }
 
 websphere_application_server::ihs::server { 'ihs_server':
-  status      => '<%= ihs_status %>',
-  target      => "<%= WebSphereConstants.base_dir %>/<%= IhsInstance.ihs_target %>",
-  log_dir     => '/opt/log/websphere/httpserver',
-  plugin_base => "<%= WebSphereConstants.base_dir %>/Plugins",
+  status       => '<%= ihs_status %>',
+  target       => "<%= WebSphereConstants.base_dir %>/<%= IhsInstance.ihs_target %>",
+  log_dir      => '<%= WebSphereConstants.base_dir %>/log/websphere/httpserver',
+  plugin_base  => "<%= WebSphereConstants.base_dir %>/Plugins",
   dmgr_host    => <%= IhsInstance.dmgr_host %>,
-  cell        => "<%= WebSphereConstants.cell %>",
+  cell         => "<%= WebSphereConstants.cell %>",
   httpd_config => "<%= WebSphereConstants.base_dir %>/<%= IhsInstance.ihs_target %>/conf/httpd_test.conf",
-  access_log  => '/opt/log/websphere/httpserver/access_log',
-  error_log   => '/opt/log/websphere/httpserver/error_log',
-  listen_port => "<%= listen_port %>",
-  require     => Ibm_pkg['Plugins'],
+  access_log   => '<%= WebSphereConstants.base_dir %>/log/websphere/httpserver/access_log',
+  error_log    => '<%= WebSphereConstants.base_dir %>/log/websphere/httpserver/error_log',
+  listen_port  => "<%= listen_port %>",
+  require      => Ibm_pkg['Plugins'],
 }
