Add datatypes to classes and defined types

--- a/templates/ihs/admin.conf.erb
+++ b/templates/ihs/admin.conf.erb
@@ -21,7 +21,7 @@
 Listen <%= @admin_listen_port %>
 
 # Directory where the Administration Server binaries are installed
-ServerRoot "<%= @_target %>"
+ServerRoot "<%= @target %>"
 
 # Name and location of the sockets file.
 # This file is used for communication between IHS Admin Child process
