--- a/templates/ihs/htpasswd.erb
+++ b/templates/ihs/htpasswd.erb
@@ -1,7 +1,7 @@
 salt=$(cut -d$ -f3 <%= @_target %>/conf/admin.passwd)
 pass=$(/opt/puppetlabs/puppet/bin/openssl passwd -apr1 -salt ${salt} <%= @admin_password %>)
 
-grep -q "<%= @admin_username %>:${pass}" <%= @_target %>/conf/admin.passwd
+grep -q "<%= @admin_username %>:${pass}" <%= @target %>/conf/admin.passwd
 
 if [ $? -ne 0 ]; then
   exit 1
