--- a/spec/acceptance/fixtures/websphere_class.erb
+++ b/spec/acceptance/fixtures/websphere_class.erb
@@ -33,7 +33,7 @@ class { '<%= WebSphereConstants.class_name %>':
   package      => '<%= WebSphereConstants.package_name %>',
   version      => '<%= WebSphereConstants.package_version %>',
   profile_base => '<%= profile_base %>',
-  repository   => "<%= WebSphereConstants.repository %>",
+  repository   => '<%= WebSphereConstants.repository %>',
   user         => '<%= user %>',
   group        => '<%= group %>',
 }
