--- a/spec/acceptance/fixtures/websphere_ihs.erb
+++ b/spec/acceptance/fixtures/websphere_ihs.erb
@@ -10,7 +10,7 @@ websphere_application_server::ihs::instance { '<%= IhsInstance.ihs_target %>':
   target           => "<%= base_dir %>/<%= IhsInstance.ihs_target %>",
   package          => "<%= IhsInstance.package_ihs %>",
   version          => "<%= WebSphereConstants.package_version %>",
-  repository       => '/opt/QA_resources/ibm_websphere/ihs_ilan/repository.config',
+  repository       => "<%= "#{HelperConstants.qa_resources}/ibm_websphere/ihs_ilan/repository.config" %>",
   install_options  => '-properties user.ihs.httpPort=80',
   manage_user      => false,
   manage_group     => false,
@@ -23,7 +23,7 @@ websphere_application_server::ihs::instance { '<%= IhsInstance.ihs_target %>':
 ibm_pkg { 'Plugins':
   ensure     => 'present',
   target     => "<%= base_dir %>/Plugins",
-  repository => '/opt/QA_resources/ibm_websphere/plg_ilan/repository.config',
+  repository => "<%= "#{HelperConstants.qa_resources}/ibm_websphere/plg_ilan/repository.config" %>",
   package    => "<%= IhsInstance.package_plugin %>",
   version    => "<%= WebSphereConstants.package_version %>",
   require    => Websphere_application_server::Ihs::Instance['<%= IhsInstance.ihs_target %>'],
